<resources>
    <string name="app_name">sunriseforestapp-client</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_login_hint">Введите почту</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="log_in">Войти</string>
    <string name="registration_logAct_button">Регистрация</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="enter_login_editText" type="id">enter_login</string>
    <string name="enter_password_editText" type="id">enter_password</string>
    <string name="taskdesk_image">taskdesk_image</string>
    <string name="task_data">task_data</string>
    <string name="task_id">task_id</string>
    <string name="task_time">task_time</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="noname">No name</string>
    <string name="deadline">Срок выполнения:</string>
    <string name="reward">Вознаграждение:</string>
    <string name="enter_name_hint">Введите имя</string>
    <string name="enter_phone_hint">Введите номер телефона</string>
    <string name="client">Заказчик:</string>
    <string name="contractor">Исполнитель:</string>
    <string name="nocontractor">пока нет:</string>
    <string name="date_pick">%1$d / %2$d / %3$d</string>
    <string name="newTask_description">Описание</string>
    <string name="newTask_startDate">Дата старта</string>
    <string name="newTask_endDate">Дата окончания</string>
    <string name="newTask_reward">Награда (₽)</string>
    <string name="newTask_client">Клиент</string>
    <string name="newTask_clientName">Имя клиента</string>
    <string name="newTask_phone">Телефон</string>
    <string name="newTask_text">Задача</string>
    <string name="newTask_add">Добавить задачу</string>
    <string name="singleTask_description">Описание </string>
    <string name="singleTask_startDate">Дата старта</string>
    <string name="singleTask_endDate">Дата окончания</string>
    <string name="singleTask_reward">Награда (₽)</string>
    <string name="singleTask_client">Клиент</string>
    <string name="singleTask_clientName">Имя клиента</string>
    <string name="singleTask_contractor">Исполнитель</string>
    <string name="singleTask_phone">Телефон</string>
    <string name="singleTask_text">Задача</string>
    <string name="singleTask_book">Забронировать</string>
    <string name="singleTask_edit">Изменить</string>
    <string name="status">status</string>
    <string name="string_name">what is this</string>
    <string name="ruble">₽</string>

</resources>
