<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="72dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    >

    <ImageView
        android:id="@+id/taskdesk_imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="0dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/taskdesk_image" />

    <TextView
        android:id="@+id/task_data_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_id_recycle_textView"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/task_data"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/task_id_recycle_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:gravity="center_vertical"
        android:text="@string/task_id"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/taskdesk_imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="5dp" />

    <TextView
        android:id="@+id/task_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/task_id_recycle_textView"
        android:layout_alignEnd="@+id/task_data_textView"
        android:layout_alignBottom="@+id/task_id_recycle_textView"
        android:text="@string/task_time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

</RelativeLayout>